<resources>
    <string name="app_name">IntentsProj</string>
    <string name="text1">Numbar 1</string>
    <string name="text2">Number 2</string>
    <string name="textV1">Number 1</string>
    <string name="textV2">Number 2</string>
    <string name="button1">OK</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multi">*</string>
    <string name="divi">/</string>
    <string name="open_cal">Opening cal.....</string>
</resources>